Created blog skeleton with test post

--- a/index.html
+++ b/index.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>Alex King</title>
-        <link rel="stylesheet" type="text/css" href="/css/main.css">
-    </head>
-    <body>
-        <!-- Temporary body stolen from http://jmcglone.com/guides/github-pages/ -->
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Heading</h1>
-				<p>And some other random text</p>
-    		</div>
-		</div>
-		<footer>
-    		<ul>
-        		<li><a href="mailto:alex.aquus@googlemail.com">email</a></li>
-        		<li><a href="https://github.com/obsidianeagle">github.com/obsidianeagle</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
+---
+layout: default
+title: Alex King
+---
+<div class="blurb">
+	<h1>Heading</h1>
+	<p>And some other random text</p>
+</div>
