Added (lack of) meaningful text to index

--- a/index.html
+++ b/index.html
@@ -3,6 +3,5 @@ layout: default
 title: Alex King
 ---
 <div class="blurb">
-	<h1>Heading</h1>
-	<p>And some other random text</p>
+	<h1>Alex King</h1>
 </div>
