Changed eurovision page from markdown to html

--- a/eurovision/index.html
+++ b/eurovision/index.html
@@ -1,25 +1,26 @@
 ---
-layout: default
+layout: standalone
 title: Eurovision Drinking Game
 ---
-Take a drink if...
+<br><br>
+<h3>Take a drink if...</h3>
 
-# 1. The live presenters make a joke that completely bombs.
+<h1>1. The live presenters make a joke that completely bombs.</h1>
 
-## 2. Graham Norton insults one of the acts.
+<h2>2. Graham Norton insults one of the acts.</h2>
 
-# 3. A performance changes key for the last chorus.
+<h1>3. A performance changes key for the last chorus.</h1>
 
-## 4. One shot for every politically-charged gay kiss shown.
+<h2>4. One shot for every politically-charged gay kiss shown.</h2>
 
-# 5. The performer changes clothes in the middle of the song.
+<h1>5. The performer changes clothes in the middle of the song.</h1>
 
-## 6. A performance contains a wind machine.
+<h2>6. A performance contains a wind machine.</h2>
 
-# 7. A country's vote presenter doesn't respond for at least 4 seconds.
+<h1>7. A country's vote presenter doesn't respond for at least 4 seconds.</h1>
 
-## 8. A vote presenter awkwardly sings their 12 points.
+<h2>8. A vote presenter awkwardly sings their 12 points.</h2>
 
-# 9. The UK gets 12 points from Malta.
+<h1>9. The UK gets 12 points from Malta.</h1>
 
-## 10. If the UK comes first or dead last, we completely drain the Who House's alcohol supply.
+<h2>10. If the UK comes first or dead last, we completely drain the Who House's alcohol supply.</h2>
