Modified eurovision page text

--- a/eurovision/index.html
+++ b/eurovision/index.html
@@ -5,17 +5,17 @@ title: Eurovision Drinking Game
 <br><br>
 <h3>Take a drink if...</h3>
 
-<h1>1. The live presenters make a joke that completely bombs.</h1>
+<h1>1. The live presenters make an awkward joke.</h1>
 
-<h2>2. Graham Norton insults one of the acts.</h2>
+<h2>2. Graham Norton insults someone.</h2>
 
 <h1>3. A performance changes key for the last chorus.</h1>
 
 <h2>4. One shot for every politically-charged gay kiss shown.</h2>
 
-<h1>5. The performer changes clothes in the middle of the song.</h1>
+<h1>5. A performer changes clothes in the middle of the song.</h1>
 
-<h2>6. A performance contains a wind machine.</h2>
+<h2>6. A performance uses a wind machine.</h2>
 
 <h1>7. A country's vote presenter doesn't respond for at least 4 seconds.</h1>
 
