--- a/eurovision/index.html
+++ b/eurovision/index.html
@@ -11,7 +11,7 @@ title: Eurovision Drinking Game
 
 <h1>3. A performance changes key for the last chorus.</h1>
 
-<h2>4. Kieran or Suzi criticises somebody's outfit.</h2>
+<h2>4. Suzi criticises somebody's outfit.</h2>
 
 <h1>5. A performer changes clothes in the middle of the song.</h1>
 
@@ -23,4 +23,4 @@ title: Eurovision Drinking Game
 
 <h1>9. The UK gets 12 points from Malta.</h1>
 
-<h2>10. If the UK comes first or dead last, we completely drain the Who House's alcohol supply.</h2>
+<h2>10. If the UK comes first or dead last, we completely drain the house's alcohol supply.</h2>
