--- a/eurovision/index.html
+++ b/eurovision/index.html
@@ -11,7 +11,7 @@ title: Eurovision Drinking Game
 
 <h1>3. A performance changes key for the last chorus.</h1>
 
-<h2>4. Suzi criticises somebody's outfit.</h2>
+<h2>4. Suzi/Kieran criticises somebody's outfit.</h2>
 
 <h1>5. A performer changes clothes in the middle of the song.</h1>
 
