Add initial draft of page

--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     <link rel="stylesheet" type="text/css" href="main.css">
   </head>
   <body>
-    <!-- link to github -->
-    <div>
-
-    </div>
-
-    <!-- link to setops -->
-    <div>
-      
+    <div class="container">
+      <!-- link to github -->
+      <div class="item active">
+        <a href="https://github.com/ObsidianEagle/">
+          <img href="images/gh_logo.png">
+          <p>GitHub</p>
+        </a>
+      </div>
+  
+      <!-- link to setops -->
+      <div class="item">
+        <img href="images/logo_temp.png">
+        <p>Coming Soon</p>
+      </div>
     </div>
   </body>
 </html>
