--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
       <!-- link to github -->
       <div class="item active">
         <a href="https://github.com/ObsidianEagle/">
-          <img href="images/gh_logo.png">
+          <img src="images/gh_logo.png">
           <p>GitHub</p>
         </a>
       </div>
   
       <!-- link to setops -->
       <div class="item">
-        <img href="images/logo_temp.png">
+        <img src="images/logo_temp.png">
         <p>Coming Soon</p>
       </div>
     </div>
