Adjust link styling and containerise

--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
   
       <!-- link to setops -->
       <div class="item">
-        <img src="images/logo_temp.png">
-        <p>Coming Soon</p>
+        <div>
+          <img src="images/logo_temp.png">
+          <p>Coming Soon</p>
+        </div>
       </div>
     </div>
   </body>
