Add pile of fire link to homepage

--- a/index.html
+++ b/index.html
@@ -6,15 +6,18 @@
   </head>
   <body>
     <div class="container">
-      <!-- link to github -->
       <div class="item active">
         <a href="https://github.com/ObsidianEagle/">
           <img src="images/gh_logo.png">
           <p>GitHub</p>
         </a>
       </div>
-  
-      <!-- link to setops -->
+      <div class="item active">
+        <a href="https://obsidianeagle.github.io/pof">
+          <img src="images/pof_logo.png">
+          <p>Pile of Fire</p>
+        </a>
+      </div>
       <div class="item">
         <div>
           <img src="images/logo_temp.png">
